objects/Product_Brand__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Product Brand table</description>
    <fields>
        <fullName>Company_Brand_Category__c</fullName>
        <description>Company Brand Category code</description>
        <label>Company Brand Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Brand_Description__c</fullName>
        <description>Company Brand Description</description>
        <label>Company Brand Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Show_or_Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show or Hide record</description>
        <inlineHelpText>Check the box to show the brand products</inlineHelpText>
        <label>Show or Hide</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Brand</label>
</CustomObject>